--- a/Tareas/Tarea Api (React y Java)/api/pom.xml
+++ b/Tareas/Tarea Api (React y Java)/api/pom.xml
@@ -8,12 +8,12 @@
 		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.contactosapi</groupId>
+	<groupId>com.apicontacts</groupId>
 	<artifactId>api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>api</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Api Contacts</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
