--- a/Tareas/Tarea Api (React y Java)/api/src/main/resources/application.properties
+++ b/Tareas/Tarea Api (React y Java)/api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+#Direccion IP : Puerto / Nombre de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/actividadapi
+spring.datasource.username=root
+spring.datasource.password=
+server.port = 9090
+spring.jpa.hibernate.ddl-auto=update 
